<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"

    tools:context=".LevelUpFrag">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rpgborder">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/GratzText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/generalrpg"
                android:gravity="center_horizontal"
                android:text="@string/Congratulations"
                android:textColor="@color/white"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/LevelChange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/generalrpg"
                android:gravity="center_horizontal"
                android:text="@string/LevelChange"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/StrIcon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:src="@drawable/biceps" />

                <TextView
                    android:id="@+id/StrStat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/generalrpg"
                    android:paddingLeft="10dp"
                    android:text="@string/StrUsed"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/DexIcon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:src="@drawable/hoodedfigure" />

                <TextView
                    android:id="@+id/DexStat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/generalrpg"
                    android:paddingLeft="10dp"
                    android:text="@string/DexUsed"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/RestIcon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:src="@drawable/sleepy" />

                <TextView
                    android:id="@+id/RestStat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/generalrpg"
                    android:paddingLeft="10dp"
                    android:text="@string/RestUsed"
                    android:textColor="@color/white" />
            </LinearLayout>

            <TextView
                android:id="@+id/StartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/generalrpg"
                android:paddingLeft="10dp"
                android:text="@string/FirstDate"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/EndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/LastDate"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/WeightChange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/generalrpg"
                android:paddingLeft="10dp"
                android:text="@string/WeightChanged"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/PhotoButton"
                    style="@style/ButtonMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rpgborder"
                    android:fontFamily="@font/generalrpg"
                    android:padding="10dp"
                    android:text="@string/TakePhoto"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/skipPhotoBut"
                    style="@style/ButtonMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:background="@drawable/rpgborder"
                    android:fontFamily="@font/generalrpg"
                    android:padding="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/SkipOption"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>